syntax = "proto3";


package com.shopic.grpc.banservice;

option java_multiple_files = true;
option java_package = "com.shopic.grpc.banservice";


message CheckUserBanRequest {
  int64 user_id = 1;
}

message CheckUserBanResponse {
  bool is_banned = 1;
}

service BanService {
  rpc checkUserBan(CheckUserBanRequest) returns (CheckUserBanResponse);
}